--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1 id="message">Message</h1>
 
+    <div id="game-board">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+    </div>
+
+    <div id="button-container">
+        <button id="reset-button">Reset</button>
+    </div>
     
     <script src="script.js"></script>
 </body>
